# linear-algebra-lab

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/core_studies/: containers.py
src/core_studies/application/checkers/: axiom_10_identity_mult.py  axiom_1_closure_addition.py  axiom_2_commutativity.py  axiom_3_associativity.py  axiom_4_neutral_element.py  axiom_5_additive_inverse.py  axiom_6_closure_scalar_mult.py  axiom_7_distributivity_vec.py  axiom_8_distributivy_scalar.py  axiom_9_associativity_scalar.py
src/core_studies/application/ports/: axiom_checker.py
src/core_studies/application/use_cases/: check_vector_space.py
src/core_studies/domain/entities/: Element.py  VectorSpace.py
src/core_studies/domain/errors/: exceptions.py
src/core_studies/domain/ports/: Operations.py  Provider.py  Validator.py
src/core_studies/infrastructure/adapters/addition/: standard_r3_addition.py
src/core_studies/infrastructure/adapters/multiplication/: __init__.py  r3_standard_scalar_mult.py  r3_x_only_scalar_mult.py
src/core_studies/infrastructure/adapters/providers/: r3_standard_element_provider.py  r3_standard_inverse_provider.py  r3_standard_zero_provider.py
src/core_studies/infrastructure/adapters/validators/: r3_standard_validator.py
src/core_studies/infrastructure/elements/: r3_vector.py
src/core_studies/interface/api/: main.py
src/core_studies/interface/api/http/controllers/: space_checker.py
